--- a/Users_with_Templates/myapp/templates/page.html
+++ b/Users_with_Templates/myapp/templates/page.html
@@ -33,7 +33,8 @@
     </div>
     <div>
         <p class="text-3xl text-center mt-10">Add a User</p>
-        <!-- <p class="not-found text-red-500 text-center" style=" --display : {{request.session.color}} ">one or more field is empty, please fill it</p> -->
+        <p class="not-found text-red-500 text-center" style=" --display : {{request.session.display}} ">one or more
+            field is empty, please fill it</p>
         <form action="/add-user" method="post" class="w-200 ml-auto mr-auto">
             {% csrf_token %}
             <div class="flex justify-between mb-10 mt-5">
@@ -48,7 +49,8 @@
                 <label for="">age: </label>
                 <input class="border" type="text" name="age">
             </div>
-            <input class="border block w-15 h-10 mx-auto shadow-[3px_3px_3px_rgb(0,0,0)] mb-5" type="submit" value="Add">
+            <input class="border block w-15 h-10 mx-auto shadow-[3px_3px_3px_rgb(0,0,0)] mb-5" type="submit"
+                value="Add">
         </form>
     </div>
 </body>
