add new assignment

--- a/Books_Authors_with_Templates/myapp/templates/author.html
+++ b/Books_Authors_with_Templates/myapp/templates/author.html
@@ -28,7 +28,7 @@
                     <label for="note" class="ml-4">Note</label>
                     <textarea class="border w-80 h-15" type="text" name="note"></textarea>
                 </div>
-                <input type="submit" class="border px-2 py-3 ml-50.5" value="Add">
+                <input type="submit" class="border px-2 py-3 ml-50.5 shadow-[2px_2px_2px_rgb(0,0,0)]" value="Add">
             </form>
         </div>
         <div class="h-180 w-100 mt-5 mr-40 overflow-y-scroll">
@@ -42,7 +42,7 @@
                 <tr class="border odd:bg-gray-200">
                     <td class="border py-2 font-bold pl-1">{{author.id}}</td>
                     <td class="border py-2 font-bold pl-1">{{author.first_name}} {{author.last_name}}</td>
-                    <td class="border py-2 font-bold text-blue-700 underline pl-1"><a href="/author/{{author.id}}">View</a></td>
+                    <td class="border py-2 font-bold text-blue-700 underline pl-1"><a href="/{{author.id}}">View</a></td>
                 </tr>
                 {% endfor %}
             </table>
