--- a/Books_Authors_with_Templates/myapp/templates/show_author.html
+++ b/Books_Authors_with_Templates/myapp/templates/show_author.html
@@ -29,7 +29,9 @@
             {% csrf_token %}
             <input type="hidden" value="{{author.id}}" name="author_id">
             <select name="new_book" class="border w-40 ml-40 mt-3">
-
+                {% for book in books %}
+                <option value="{{book.id}}">{{book.title}}</option>
+                {% endfor %}
             </select>
             <input type="submit" value="Add" class="border-2 mt-3 ml-3 shadow-[2px_2px_2px_rgb(0,0,0)]">
         </form>
