--- a/Semi_Restfull_TV_Shows/myapp/templates/add_new_show.html
+++ b/Semi_Restfull_TV_Shows/myapp/templates/add_new_show.html
@@ -18,21 +18,21 @@
         {% csrf_token %}
         <div class="mb-14">
             <label for="" class="block mb-2 text-[0.9em]">Title</label>
-            <input type="text" name="title" class="border">
+            <input type="text" name="title" class="border pl-2">
         </div>
         <div class="flex justify-between mb-15">
             <div class="">
                 <label for="" class="block mb-2 text-[0.9em]">Network</label>
-                <input type="text" name="network" class="border">
+                <input type="text" name="network" class="border pl-2">
             </div>
             <div class="">
                 <label for="" class="block mb-2 text-[0.9em]">RelesDate</label>
-                <input type="datetime" name="date" class="border">
+                <input type="datetime" name="date" class="border pl-2">
             </div>
         </div>
         <div class="">
             <label for="" class="block">Description</label>
-            <textarea name="desc" class="border h-25 w-80 mb-15"></textarea>
+            <textarea name="desc" class="border h-25 w-80 mb-15 pl-2"></textarea>
         </div>
         <input type="submit" value="Create" class="border block mx-auto w-20 shadow-[2px_2px_2px_rgb(0,0,0)]">
     </form>
