--- a/Semi_Restfull_TV_Shows/myapp/templates/tv_show.html
+++ b/Semi_Restfull_TV_Shows/myapp/templates/tv_show.html
@@ -12,7 +12,7 @@
 <body>
     <div class="flex items-center w-400 mx-auto my-14 justify-between">
         <h1 class="text-3xl font-bold">TV Show {{show.id}}</h1>
-        <a href="/shows" class="text-blue-400 underline">Go Back</a>
+        <a href="../" class="text-blue-400 underline">Go Back</a>
     </div>
     <div class="ml-40 w-300">
         <p class="mb-7">Title: {{show.title}}</p>
@@ -22,9 +22,11 @@
     </div>
     <p class="block ml-40 mb-10">Last Updated: date</p>
     <div class="flex items-center justify-between w-30 ml-40">
-        <a href="/shows/edit" class="text-blue-400 underline">Edit </a>
+        <a href="/shows/{{show.id}}/edit" class="text-blue-400 underline">Edit </a>
         <p> | </p>
         <form action="/delete" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="id" value="{{show.id}}">
             <input type="submit" value="Delete" class="text-blue-400 underline">
         </form>
     </div>
