--- a/Favorite_Books/myapp/templates/book_details.html
+++ b/Favorite_Books/myapp/templates/book_details.html
@@ -10,7 +10,7 @@
 <body>
     <div class="flex justify-between items-center mt-10 w-450 mx-auto border-b-2 pb-5 mb-20">
         <h1 class="text-3xl">Welcome {{user.first_name}}</h1>
-        <form action="/logout" method="post" class="flex justify-between w-40">
+        <form action="/books/{{book.id}}/logout" method="post" class="flex justify-between w-40">
             {% csrf_token %}
             <a href="../" class="underline text-blue-500 text-[1.2em]">Go Back</a>
             <input type="submit" value="Logout" class="underline text-blue-400 text-[1.2em]">
@@ -28,9 +28,8 @@
             {% for user_who_like in book.users_who_likes.all %}
             <li>{{user_who_like.first_name}} {{user_who_like.last_name}}
                 {% if user_who_like.id == user.id %}
-                <form action="/un_favorite" method="post" class="inline-block ml-4">
+                <form action="/books/{{book.id}}/un_favorite" method="post" class="inline-block ml-4">
                     {% csrf_token %}
-                    <input type="hidden" name="book_id" value="{{book.id}}">
                     <input type="submit" value="Un-Favorite" class="underline text-blue-500">
                 </form>
                 {% endif %}
@@ -38,9 +37,8 @@
             {% endfor %}
         </ul>
         {% if user not in book.users_who_likes.all %}
-        <form action="/add_to_your_favoriets_in_info" method="post">
+        <form action="/books/{{book.id}}/add_to_your_favoriets_in_info" method="post">
             {% csrf_token %}
-            <input type="hidden" value="{{book.id}}" name="book_id">
             <input type="hidden" value="{{user.id}}" name="user_id">
             <input type="submit" class="underline text-blue-400" value="Add to Favorites">
         </form>
